RESOLVED FIXED191110
[GTK][WPE] Remaining topPrivatelyControlledDomain() fixes
https://bugs.webkit.org/show_bug.cgi?id=191110
Summary [GTK][WPE] Remaining topPrivatelyControlledDomain() fixes
Claudio Saavedra
Reported 2018-10-31 04:15:23 PDT
[GTK][WPE] Remaining topPrivatelyControlledDomain() fixes
Attachments
Patch (2.55 KB, patch)
2018-10-31 04:15 PDT, Claudio Saavedra
no flags
Claudio Saavedra
Comment 1 2018-10-31 04:15:46 PDT
Michael Catanzaro
Comment 2 2018-10-31 07:52:01 PDT
Comment on attachment 353485 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=353485&action=review Specifically, what tests is it fixing? > Source/WebCore/platform/soup/PublicSuffixSoup.cpp:49 > + if (!domain.isAllASCII()) > + return domain; Syncing with the Mac implementation seems most important, but now can't the function return a domain that is not the top privately-controlled domain?
Claudio Saavedra
Comment 3 2018-10-31 07:58:03 PDT
(In reply to Michael Catanzaro from comment #2) > Comment on attachment 353485 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=353485&action=review > > Specifically, what tests is it fixing? > > > Source/WebCore/platform/soup/PublicSuffixSoup.cpp:49 > > + if (!domain.isAllASCII()) > > + return domain; > > Syncing with the Mac implementation seems most important, but now can't the > function return a domain that is not the top privately-controlled domain? I went back to the origin of that code, and it's here: https://bugs.webkit.org/show_bug.cgi?id=170798 There isn't much of an explanation but I'm guessing that this is not expected to be called with non-ASCII. And all tests pass with this.
WebKit Commit Bot
Comment 4 2018-10-31 08:19:33 PDT
Comment on attachment 353485 [details] Patch Clearing flags on attachment: 353485 Committed r237637: <https://trac.webkit.org/changeset/237637>
WebKit Commit Bot
Comment 5 2018-10-31 08:19:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.