[GTK][WPE] Remaining topPrivatelyControlledDomain() fixes https://bugs.webkit.org/show_bug.cgi?id=191110

Reviewed by Michael Catanzaro.

Covered by existing tests.

Turns out that this method is expected to reject domains that
are not registrable. Also sync with the Mac implementation in
that given domains that are not all ASCII should be returned
back as is. This fixes the remaining Public Suffix API tests.

* platform/soup/PublicSuffixSoup.cpp:
(WebCore::topPrivatelyControlledDomain):


Canonical link: https://commits.webkit.org/205920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237637 268f45cc-cd09-0410-ab3c-d52691b4dbfc